Bug #36522 Some tests of system variables have diffs on 64bit platorms
Submitted: 6 May 2008 10:21 Modified: 28 Jul 2008 17:18
Reporter: Horst Hunger
Status: Closed
Category:Server: Tests Severity:S3 (Non-critical)
Version:5.1.25 OS:Any (64 bit)
Assigned to: Horst Hunger Target Version:5.1+
Triage: D3 (Medium)

[6 May 2008 10:21] Horst Hunger
Description:
Some system variables may have larger values on 64 bit platforms and need therefore
different result files than on 32 platforms. 

How to repeat:
run system variable tests delivered by folio3 on 64 bit platforms.

Suggested fix:
Introduce "have_32bit.inc" and "have_64bit.inc" and uses them in the affected test
programs.
[8 May 2008 20:12] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/46531

ChangeSet@1.2610, 2008-05-08 20:13:39+02:00, hhunger@hh-nb.hungers +209 -0
  Fixes for bug#36522.
[12 May 2008 11:02] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/46616

ChangeSet@1.2623, 2008-05-12 12:02:06+03:00, gkodinov@magare.gmz +2 -0
  Fixed:
   - a 64 bit compile warning in embedded
   - disabled the new (and failing tests for Bug#36522
[13 May 2008 17:18] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/46658

ChangeSet@1.2631, 2008-05-13 20:17:59+05:00, gshchepa@host.loc +1 -0
  disabled.def:
    max_heap_table_size_basic_32, query_cache_size_basic_32 and 
    tmp_table_size_basic_32 tests have been disabled according to
    bug #36522.
[14 May 2008 11:12] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/46685

ChangeSet@1.2634, 2008-05-14 11:11:09+02:00, tnurnberg@noir.wlan.koehntopp.de +1 -0
  Bug#36522: Some tests of system variables have diffs on 64bit platorms
  
  temporary mass-disable of affected tests
[14 May 2008 17:20] Bugs System
Pushed into 5.1.25-rc
[22 May 2008 11:50] Bugs System
Pushed into 6.0.6-alpha
[15 Jul 2008 6:42] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/49730

2717 Horst Hunger	2008-07-14 [merge]
      Merge of fix for bug#36522 from 5.1.
[15 Jul 2008 6:43] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/49731

2704 Horst Hunger	2008-07-14
      One fix for bug#36522. Removed values tests larger than max int of 32 bits.
[16 Jul 2008 8:40] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/49801

2704 Horst Hunger	2008-07-15
      One fix for bug#36522. Removed test of values larger than max int for 32 bits.
[22 Jul 2008 8:22] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/50159

2704 Horst Hunger	2008-07-21
      Fix for Bug#36522: A lot of these tests contain lagre values, that lead to very long
run times and to timeouts, especially on machines with not enough RAM (>4GB). They will be
put in an own test suite.
[23 Jul 2008 15:28] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/50323

2674 Horst Hunger	2008-07-23
      Final fix for bug#36522 in 5.1. This new fix was necessary due to fix of bug 37708.
[23 Jul 2008 18:37] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/50347

2743 Horst Hunger	2008-07-23
      Postfix of merge 5.1 - 6.0 for Bug#36522:Removed "multi_range_count" tests as this
system variable doesn't exist anymore.
[23 Jul 2008 18:38] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/50350

2742 Horst Hunger	2008-07-23
      Merge of fix for bug#36522 from 5.1 to 6.0.
[23 Jul 2008 18:38] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/50351

2674 Horst Hunger	2008-07-23
      Final fix for bug#36522 in 5.1. This new fix was necessary due to fix of bug 37708.
[24 Jul 2008 4:16] Patrick Crews
Ok to push.
[28 Jul 2008 16:45] Bugs System
Pushed into 6.0.7-alpha  (revid:alik@mysql.com-20080725172155-fnc73o50e4tgl23k) (version
source revid:alik@mysql.com-20080725172155-fnc73o50e4tgl23k) (pib:3)
[28 Jul 2008 17:18] Paul DuBois
Test case changes. No changelog entry needed.
[28 Jul 2008 18:57] Bugs System
Pushed into 5.1.25-rc  (revid:sp1r-pcrews@pcrews-mac-local.local-20080515160233-33422)
(version source revid:sp1r-pcrews@pcrews-mac-local.local-20080515160233-33422) (pib:3)
[12 Aug 2008 16:55] Bugs System
Pushed into 6.0.7-alpha  (revid:horst@mysql.com-20080723140644-yo5sz48l1ls7loqj) (version
source revid:davi.arnaut@sun.com-20080812141852-8e6knbqclpfd8irn) (pib:3)
[12 Aug 2008 17:20] Bugs System
Pushed into 5.1.28  (revid:horst@mysql.com-20080723140644-yo5sz48l1ls7loqj) (version
source revid:davi.arnaut@sun.com-20080812142843-he05ncsggstbn57z) (pib:3)
[28 Aug 2008 22:16] Bugs System
Pushed into 6.0.7-alpha  (revid:cbell@mysql.com-20080822132131-uveo6wiuecy6m2b8) (version
source revid:cbell@mysql.com-20080822132131-uveo6wiuecy6m2b8) (pib:3)
[14 Sep 2008 2:58] Bugs System
Pushed into 6.0.7-alpha  (revid:horst@mysql.com-20080723154059-wxtq1flgbh6t1sh6) (version
source revid:vvaintroub@mysql.com-20080804094710-jb2qpqxpf2ir2gf3) (pib:3)