Fixed:  - a 64 bit compile warning in embedded  - disabled the new (and failing tests for Bug#36522

libmysqld/lib_sql.cc:
  Fixed: win64 warning
mysql-test/t/disabled.def:
  Disabled the new (and failing) tests for 36522